--- a/game-results.html
+++ b/game-results.html
@@ -6,7 +6,7 @@
     <title>Search Results - Game Explorer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <!-- DEVELOPER: Jayden McRae, IS117-xxx, Fall 2024 -->
+    <!-- DEVELOPER: Jayden McRae, IS117-003, Fall 2024 -->
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,7 +48,7 @@
     </div>
 
     <footer class="bg-light text-center py-3 mt-4">
-        <p>© Jayden McRae, 11/5/24 | <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a></p>
+        <p>© Jayden McRae, 11/26/24 | <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
