--- a/account.html
+++ b/account.html
@@ -6,7 +6,7 @@
     <title>Account - Game Explorer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <!-- DEVELOPER: Jayden McRae, IS117-xxx, Fall 2024 -->
+    <!-- DEVELOPER: Jayden McRae, IS117-003, Fall 2024 -->
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
