--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Video Game Explorer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/Game-Controller-PNG-Clipart.png">
     <!-- DEVELOPER: Jayden McRae, IS117-003, Fall 2024 -->
 </head>
 <body>
@@ -45,7 +46,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="path/to/game1.jpg" class="card-img-top" alt="Game 1">
+                        <img src="images/example-game.jpg" class="card-img-top" alt="Game 1">
                         <div class="card-body">
                             <h5 class="card-title">Game 1</h5>
                             <p class="card-text">Description of Game 1.</p>
